kubernetes/command-and-arguments-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: ubuntu-sleeper-3
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    command:
    - "sleep"
    - "1200"
