kubernetes/manual-scheduling-pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: dev
  labels: 
    app: myapp
    type: back-end
spec:
  containers:
    - name: nginx
      image: nginx
  nodeName: node01 # manual scheduling this pod to node node01
