kubernetes/redis-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  - name: redis
    image: redis
