kubernetes/test.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: redis-pod
  labels:
    name: redis-pod
spec:
  - name: redis
    image: redis
