kubernetes/ingress-res.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - http:
      paths:
      - path: /wear
        backend:
          service:
            name: test
            port:
              number: 80
      - path: /watch
        backend:
          service:
            name: test
            port:
              number: 80
